Fixing the NREL logo on small screens

--- a/css/nrelstyle.css
+++ b/css/nrelstyle.css
@@ -290,7 +290,7 @@ a:hover {
 
 @media (max-width: 430px) {
     .nreltitle {
-        font-size: 10pt;
+        font-size: 14pt;
     }
 
     .topbar {
@@ -311,7 +311,7 @@ a:hover {
         display: block;
         color: #ffffff !important;
         text-align: center;
-        padding: 10px 10px;
+        padding: 5px 5px;
         font-size: 10pt;
         text-decoration: none !important;
         position: relative;
@@ -611,6 +611,10 @@ td li {
 
 @media (max-width: 430px) {
     .sidebar {
+        display: none;
+    }
+
+    .nrellink {
         display: none;
     }
 }
